force-app/main/default/objects/Bankruptcy__c/Bankruptcy__c.object-meta.xml
<CustomObject>
    <label>Bankruptcy</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Bankruptcy #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bankruptcies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>