force-app/main/default/objects/Bankruptcy__c/fields/Amended_POC_Amount__c.field-meta.xml
<CustomField>
    <fullName>Amended_POC_Amount__c</fullName>
    <label>Amended POC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>