force-app/main/default/objects/Bankruptcy__c/fields/Amount_Of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Claim__c</fullName>
    <label>Amount Of Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>