force-app/main/default/objects/Bankruptcy__c/fields/Attorney_Address__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Address__c</fullName>
    <label>Attorney Address</label>
    <type>TextArea</type>
</CustomField>