force-app/main/default/objects/Bankruptcy__c/fields/Attorney_Fax__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fax__c</fullName>
    <label>Attorney Fax</label>
    <type>Phone</type>
</CustomField>