force-app/main/default/objects/Bankruptcy__c/fields/Bankruptcy_Description__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Description__c</fullName>
    <label>Bankruptcy Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>