force-app/main/default/objects/Bankruptcy__c/fields/Converted_From_Type__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Type__c</fullName>
    <label>Converted From Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chapter 7</fullName>
            </value>
            <value>
                <fullName>Chapter 11</fullName>
            </value>
            <value>
                <fullName>Chapter 13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>