force-app/main/default/objects/Bankruptcy__c/fields/Counsel_Address__c.field-meta.xml
<CustomField>
    <fullName>Counsel_Address__c</fullName>
    <label>Counsel Address</label>
    <type>TextArea</type>
</CustomField>