force-app/main/default/objects/Bankruptcy__c/fields/Counsel_Email__c.field-meta.xml
<CustomField>
    <fullName>Counsel_Email__c</fullName>
    <label>Counsel Email</label>
    <type>Email</type>
</CustomField>