force-app/main/default/objects/Bankruptcy__c/fields/Counsel_Fax__c.field-meta.xml
<CustomField>
    <fullName>Counsel_Fax__c</fullName>
    <label>Counsel Fax</label>
    <type>Phone</type>
</CustomField>