force-app/main/default/objects/Bankruptcy__c/fields/Counsel_Phone__c.field-meta.xml
<CustomField>
    <fullName>Counsel_Phone__c</fullName>
    <label>Counsel Phone</label>
    <type>Phone</type>
</CustomField>