force-app/main/default/objects/Bankruptcy__c/fields/Cure_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Cure_Amount_Due__c</fullName>
    <label>Cure Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>