force-app/main/default/objects/Bankruptcy__c/fields/Cure_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Cure_Amount_Paid__c</fullName>
    <label>Cure Amount Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>