force-app/main/default/objects/Bankruptcy__c/fields/Customer_s_Attorney_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Attorney_Name__c</fullName>
    <label>Customer&apos;s Attorney Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>