force-app/main/default/objects/Bankruptcy__c/fields/Date_Amended_POC_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Amended_POC_Filed__c</fullName>
    <label>Date Amended POC Filed</label>
    <type>Date</type>
</CustomField>