force-app/main/default/objects/Bankruptcy__c/fields/Date_Bankruptcy_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Bankruptcy_Filed__c</fullName>
    <label>Date Bankruptcy Filed</label>
    <type>Date</type>
</CustomField>