force-app/main/default/objects/Bankruptcy__c/fields/Date_Claim_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_Filed__c</fullName>
    <label>Date Claim Filed</label>
    <type>Date</type>
</CustomField>