force-app/main/default/objects/Bankruptcy__c/fields/Date_Discharged__c.field-meta.xml
<CustomField>
    <fullName>Date_Discharged__c</fullName>
    <label>Date Discharged</label>
    <type>Date</type>
</CustomField>