force-app/main/default/objects/Bankruptcy__c/fields/Date_Dismissed_Discharged__c.field-meta.xml
<CustomField>
    <fullName>Date_Dismissed_Discharged__c</fullName>
    <label>Date Dismissed</label>
    <type>Date</type>
</CustomField>