force-app/main/default/objects/Bankruptcy__c/fields/Date_Preference_Claim_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Preference_Claim_Filed__c</fullName>
    <label>Date Preference Claim Filed</label>
    <type>Date</type>
</CustomField>