force-app/main/default/objects/Bankruptcy__c/fields/Date_Retained__c.field-meta.xml
<CustomField>
    <fullName>Date_Retained__c</fullName>
    <label>Date Retained</label>
    <type>Date</type>
</CustomField>