force-app/main/default/objects/Bankruptcy__c/fields/Date_Settled__c.field-meta.xml
<CustomField>
    <fullName>Date_Settled__c</fullName>
    <label>Date Settled</label>
    <type>Date</type>
</CustomField>