force-app/main/default/objects/Bankruptcy__c/fields/Filed_Before_Termination__c.field-meta.xml
<CustomField>
    <fullName>Filed_Before_Termination__c</fullName>
    <label>Filed Before Termination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>