force-app/main/default/objects/Bankruptcy__c/fields/Outside_Counsel_Name__c.field-meta.xml
<CustomField>
    <fullName>Outside_Counsel_Name__c</fullName>
    <label>Outside Counsel Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>