force-app/main/default/objects/Bankruptcy__c/fields/Plan_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Confirmation_Date__c</fullName>
    <label>Plan Confirmation Date</label>
    <type>Date</type>
</CustomField>