force-app/main/default/objects/Bankruptcy__c/fields/Preference_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Preference_Claim_Amount__c</fullName>
    <label>Preference Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>