force-app/main/default/objects/Bankruptcy__c/fields/Preference_Claim_Filed_By_Estate__c.field-meta.xml
<CustomField>
    <fullName>Preference_Claim_Filed_By_Estate__c</fullName>
    <label>Preference Claim Filed By Estate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>