force-app/main/default/objects/Bankruptcy__c/fields/Preference_Claim_Notes__c.field-meta.xml
<CustomField>
    <fullName>Preference_Claim_Notes__c</fullName>
    <label>Preference Claim Notes</label>
    <type>TextArea</type>
</CustomField>