force-app/main/default/objects/Bankruptcy__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>OmniExpress</fullName>
            </value>
            <value>
                <fullName>OmniExpress2</fullName>
            </value>
            <value>
                <fullName>OmniTRACS</fullName>
            </value>
            <value>
                <fullName>SFM</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>