force-app/main/default/objects/Bankruptcy__c/fields/Proof_Of_Claim_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Proof_Of_Claim_Deadline__c</fullName>
    <label>Proof Of Claim Deadline</label>
    <type>Date</type>
</CustomField>