force-app/main/default/objects/Bankruptcy__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chapter 7</fullName>
            </value>
            <value>
                <fullName>Chapter 11</fullName>
            </value>
            <value>
                <fullName>Chapter 13</fullName>
            </value>
            <value>
                <fullName>Informal Dissolution</fullName>
            </value>
            <value>
                <fullName>For Benefit of Creditors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>